c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/pointer_conversions/compare_void_ptr_to_int.c
int main(void) {
    return (void *)0 == 20ul; // you can't compare pointers to ints
}